Remove support for python 2.6 and 3.2

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 install_command = pip install {opts} {packages}
-envlist = py26,py27,py35
+envlist = py27,py35
 indexserver =
     default = https://pypi.python.org/simple
 
