Add linting and yapf reformat target

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 install_command = pip install {opts} {packages}
-envlist = py27,py35
+envlist = py27,py35,lint
 indexserver =
     default = https://pypi.python.org/simple
 
@@ -10,9 +10,10 @@ commands =
     rm -f .coverage
     py.test --cov=logpy -vv {posargs:logpy}
 basepython =
-    py26: python2.6
     py27: python2.7
     py35: python3.5
+    lint: python3.5
+    yapf: python3.5
 deps =
     -r{toxinidir}/requirements.txt
     coverage
@@ -21,3 +22,20 @@ deps =
     pytest-cov
 whitelist_externals =
     rm
+
+[testenv:lint]
+deps =
+    flake8
+commands =
+    flake8 logpy
+
+[testenv:yapf]
+# Tox target for autoformatting the code for pep8.
+deps =
+    yapf
+commands =
+    yapf --recursive logpy --in-place
+
+
+[flake8]
+ignore = E731,F811,E712
