Add flake8 linting to get code consistency

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ python:
     - "pypy"
     - "pypy3"
 install:
-    - pip install coverage toolz multipledispatch pytest pytest-cov
+    - pip install coverage toolz multipledispatch pytest pytest-cov flake8
 script:
     - py.test --cov=logpy -vv logpy
+    - flake8 logpy
 after_success:
     - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then
         pip install coveralls --use-mirrors;
