--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ python:
     - "pypy"
     - "pypy3"
 install:
-    - pip install coverage toolz multipledispatch pytest pytest-cov flake8
+    - pip install coverage pytest pytest-cov flake8
+    - pip install -r requirements.txt
 script:
     - py.test --cov=logpy -vv logpy
     - flake8 logpy
