--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
     - pip install coverage pytest pytest-cov flake8
     - pip install -r requirements.txt
 script:
+    - git rev-parse HEAD
     - py.test --cov=logpy -vv logpy
     - flake8 logpy
 after_success:
