Add py3k classifiers and such.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 install_command = pip install {opts} {packages}
-envlist = py27,py35,lint
+envlist = py27,py34,py35,pypy,lint
 indexserver =
     default = https://pypi.python.org/simple
 
@@ -9,11 +9,6 @@ usedevelop = True
 commands =
     rm -f .coverage
     py.test --cov=logpy -vv {posargs:logpy}
-basepython =
-    py27: python2.7
-    py35: python3.5
-    lint: python3.5
-    yapf: python3.5
 deps =
     -r{toxinidir}/requirements.txt
     coverage
@@ -28,6 +23,7 @@ deps =
     flake8
 commands =
     flake8 logpy
+basepython = python3.5
 
 [testenv:yapf]
 # Tox target for autoformatting the code for pep8.
@@ -35,7 +31,7 @@ deps =
     yapf
 commands =
     yapf --recursive logpy --in-place
-
+basepython = python3.5
 
 [flake8]
 ignore = E731,F811,E712,E127,E126
