Find, replace, rename and switch to relative imports.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ indexserver =
 usedevelop = True
 commands =
     rm -f .coverage
-    py.test --cov=logpy -vv {posargs:logpy}
+    py.test --cov=kanren -vv {posargs:kanren}
 deps =
     -r{toxinidir}/requirements.txt
     coverage
@@ -22,7 +22,7 @@ whitelist_externals =
 deps =
     flake8
 commands =
-    flake8 logpy
+    flake8 kanren
 basepython = python3.5
 
 [testenv:yapf]
@@ -30,7 +30,7 @@ basepython = python3.5
 deps =
     yapf
 commands =
-    yapf --recursive logpy --in-place
+    yapf --recursive kanren --in-place
 basepython = python3.5
 
 [flake8]
