--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ sudo: false
 language: python
 python:
     - "2.7"
-    - "3.3"
     - "3.4"
     - "3.5"
+    - "3.6"
     - "pypy"
 install:
-    - pip install coverage pytest pytest-cov flake8
+    - pip install coverage pytest "pytest-cov<2.6.0" flake8
     - pip install -r requirements.txt
 script:
     - git rev-parse HEAD
