Updates for flake8 checks
The added flake8 ignore codes are set according to existing code, so I'm
assuming they're acceptable due to that.

--- a/tox.ini
+++ b/tox.ini
@@ -34,4 +34,4 @@ commands =
 basepython = python3.5
 
 [flake8]
-ignore = E731,F811,E712,E127,E126
+ignore = E731,F811,E712,E127,E126,C901,W503,W504
