--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
     - git rev-parse HEAD
     - py.test --cov=kanren -vv kanren
     - flake8 kanren
+    - flake8 tests
 after_success:
     - if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then
         pip install coveralls --use-mirrors;
