Ignore examples in testing and remove print statements

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 # content of pytest.ini
 [pytest]
 addopts = --doctest-modules
+norecursedirs = examples
+testpaths = tests
 doctest_optionflags= NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
